<resources>
    <string name="app_name">ProfileViewSample</string>
    <string name="personal_data">Datos de mi perfil</string>
    <string name="cedula">Cédula</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="email">Correo</string>
    <string name="age">Edad</string>
    <string name="city">Ciudad</string>
    <string name="phone">Celular</string>
    <string name="button_title">Completar datos</string>

</resources>